ProFit/objects/Address_Book__c.object
<CustomObject>
    <description>Address book(Location) of the Event.</description>
    <fields>
        <fullName>City__c</fullName>
        <description>Exact City of the Location/Address.</description>
        <inlineHelpText>Input the exact City of the Event.</inlineHelpText>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of the Event.</description>
        <inlineHelpText>Input the County of the Event.</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burma</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Zip_correct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Zip verification of the Address</description>
        <inlineHelpText>This is an auto-verification checkbox.</inlineHelpText>
        <label>Is Zip correct?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landmark__c</fullName>
        <description>Landmark of the Location/Address.</description>
        <inlineHelpText>Input what is the landmark/nearest landmark of the event&apos;s location.</inlineHelpText>
        <label>Landmark</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code of the Location/Address.</description>
        <inlineHelpText>Input the postal code of the city.</inlineHelpText>
        <label>Postal Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Exact State of the Location/Address.</description>
        <inlineHelpText>Input the state of the event(If applicable)</inlineHelpText>
        <label>State</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Exact Street of the Location/Address.</description>
        <inlineHelpText>Input the exact Street of the Event.</inlineHelpText>
        <label>Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verification of the Location/Address.</description>
        <inlineHelpText>Check if the Location/Address of the event is verified.</inlineHelpText>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Address Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Books</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>